@@ -5,6 +5,7 @@ software-center (1.1.11debian1) unstable; urgency=low
     - Use logging.warning instead of logging.exception (Closes: #568941)
   * debian/rules:
     - Replace Ubuntu by Debian in some files when not building on Ubuntu.
+    - Use system-software-install as the icon on Debian.
   * softwarecenter/app.py:
     - When not running on Ubuntu, remove the Views menu.
 
